--- a/views/subscription-details.ejs
+++ b/views/subscription-details.ejs
@@ -183,10 +183,10 @@
           <% if (product.buyer) { %>
             <p class="sold-info">Sold to: <%= product.buyer.fullName %></p>
           <% } else { %>
-            <form action="/subscription/buy" method="POST">
+            <!-- <form action="/subscription/buy" method="POST">
               <input type="hidden" name="productId" value="<%= product._id %>">
               <button type="submit" class="buy-button">Buy Now</button>
-            </form>
+            </form> -->
           <% } %>
         </div>
 
@@ -196,7 +196,7 @@
           <p><strong>Available Stock:</strong> <%= product.quantity %></p>
         </div> -->
 
-        <% if (product.otp && user._id.equals(product.seller._id)) { %>
+        <% if (product.orderIds && product.orderIds.length > 0 && user._id.equals(product.seller._id)) { %>
           <div class="otp-verification-card">
             <h4>OTP Verification</h4>
             <div class="otp-input-group">
