--- a/views/secondHand/auction.ejs
+++ b/views/secondHand/auction.ejs
@@ -517,7 +517,7 @@ if (distance <= 0) {
   }
   
   // Disable product bid button
-  const productBidBtn = document.querySelector('[href="/subscription/buy/<%= product._id %>/add-bid-product"]');
+  const productBidBtn = document.querySelector('[href="/secondHand/buy/<%= product._id %>/add-bid-product"]');
   if (productBidBtn) {
     productBidBtn.style.pointerEvents = "none";
     productBidBtn.style.opacity = "0.6";
